# wtsdf

./: .gitignore  .travis.yml  README.md  setup.cfg
wtsdf/: cli.py  linter.py
wtsdf/lint/: bounce_needs_max_vel.py
wtsdf/tests/: test_bounce_needs_max_vel.py
wtsdf/tests/bounce_needs_max_vel/: max_vel_invalid.sdf  max_vel_not_given.sdf  max_vel_ok.sdf  max_vel_zero.sdf
