[metadata]
name = wtsdf
version = attr: wtsdf.__version__
description = Linter for SDFormat, a robot description format.
long_description = file: README.rst
url = http://github.com/sloretz/wtsdf
license = Apache License, Version 2.0
author = Shane Loretz
author_email = shane.loretz@gmail.com
maintainer = Shane Loretz
maintainer_email = shane.loretz@gmail.com
download_url = https://github.com/sloretz/wtsdf/archive/0.1.0.tar.gz
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = True
packages = find:
install_requires =
  setuptools>=40.0.0
  defusedxml>=0.5.0
tests_require =
  flake8>=3.5.0

[options.entry_points]
console_scripts =
  wtsdf = wtsdf.cli:main

wtsdf.lint =
  bounce_needs_max_vel = wtsdf.lint.bounce_needs_max_vel:BounceNeedsMaxVel
